Fix overflow on mobile

--- a/style.css
+++ b/style.css
@@ -146,7 +146,9 @@ body {
       transition-delay: 0.5s; }
 
 div[id="page"] {
-  padding: 110px 20px 20px; }
+  padding: 110px 20px 20px;
+  overflow-y: hidden;
+  max-width: 100%; }
 
 /* WRAPPER */
 .wrapper, .wrapper-content, .archive .site-branding {
